# Win11Lib_Call_Graph_Construction

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: sample_paths.yml
docs/: schema.md
docs/analytics/: demo_orphan_apis.csv  empty_call_graphs.json  sample_call_graph_top_nodes.csv
docs/analytics/sample_graphs/: kernel32.dll.callgraph.json  kernelbase.dll.callgraph.json  ntdll.dll.callgraph.json  unified_kernel32_ntdll.callgraph.json
docs/ghidra-scripts/: run_call_graph_example.bat
docs/references/: tooling.md
notebooks/: call_graph_analysis_demo.ipynb  sample_call_graph_analysis.ipynb
scripts/: analyzeHeadless_fake.bat  bootstrap_env.ps1  run_full_pipeline.ps1
scripts/ghidra/: export_call_graph.py  set_pdb_path.py
src/call_graph_win11/: __init__.py  cli.py  config.py
src/call_graph_win11.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/call_graph_win11/analysis/: __init__.py  adapters.py  graph_audit.py  graph_loader.py  graph_queries.py  unified_graph.py  visualization.py
src/call_graph_win11/io/: __init__.py  ghidra_interface.py
src/call_graph_win11/pipelines/: __init__.py  build_call_graph.py  ghidra_callgraph.py
src/call_graph_win11/ui/: __init__.py  app.py
tests/: test_graph_loader.py  test_pdb_fetcher.py  test_placeholder.py  test_windows_inventory.py
